minor performance improvement: fixes music interruption when making a window

--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
       style="
         --x: 830px;
         --y: 520px;
-        --width: 400px;
-        --height: 480px;
+        --width: 270px;
+        --height: 430px;
         --z-index: 5;
         --maximised: 0;
       "
@@ -211,7 +211,7 @@
     >
       <header class="window-header">
         <div class="fill-left"><code>🎵</code></div>
-        <div>Music Player</div>
+        <div>Music</div>
         <div class="fill-right windowControl" id="window_Music_Control"></div>
       </header>
       <script src="assets/fonts/fontawesome.js"></script>
