--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="assets/favicon/favicon-96x96.png" sizes="96x96" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="assets/favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
     <link rel="icon" type="image/svg+xml" href="assets/favicon/favicon.svg" />
     <link rel="shortcut icon" href="assets/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon/apple-touch-icon.png"
+    />
     <meta name="apple-mobile-web-app-title" content="Web OS" />
     <link rel="manifest" href="assets/favicon/site.webmanifest" />
     <title>Web OS Demo</title>
@@ -244,7 +253,8 @@
           margin: 1em;
           border-radius: var(--rounding);
           transition-duration: 200ms;
-          box-shadow: var(--shadow-distance) var(--shadow-distance) var(--shadow-blur) var(--shadow);
+          box-shadow: var(--shadow-distance) var(--shadow-distance)
+            var(--shadow-blur) var(--shadow);
         }
         .music-playing-image {
           max-width: 12em !important;
