Add Typing.mp3 to queue (for music)

--- a/index.html
+++ b/index.html
@@ -242,6 +242,11 @@
             audio: "assets/music/Microworld.mp3",
             image: "assets/music/images/noImage.jpg",
           },
+          {
+            title: "Typing",
+            audio: "assets/music/Typing.mp3",
+            image: "assets/music/images/noImage.jpg",
+          },
         ];
         // Index
         let songIndex = 0;
